--- a/adventofcode2022.cabal
+++ b/adventofcode2022.cabal
@@ -68,8 +68,11 @@ executable adventofcode2022
 
     -- Other library packages from which modules are imported.
     build-depends:
-        base ^>=4.16,
-        split ^>=0.2
+        base ^>=4.17,
+        split ^>=0.2,
+        containers ^>=0.6,
+        Stack ^>=0.4,
+        lens ^>=5.2
 
     -- Directories containing source files.
     hs-source-dirs:   app
