--- a/adventofcode2022.cabal
+++ b/adventofcode2022.cabal
@@ -40,10 +40,6 @@ author:             Manshilin Oleg
 -- An email address to which users can send suggestions, bug reports, and patches.
 maintainer:         manshilin.o@gmail.com
 
--- A copyright notice.
--- copyright:
-build-type:         Simple
-
 -- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
 extra-doc-files:    CHANGELOG.md
 
@@ -52,6 +48,18 @@ extra-doc-files:    CHANGELOG.md
 
 common warnings
     ghc-options: -Wall
+
+library
+    hs-source-dirs: src
+    exposed-modules: Day1, Day2, Day3,
+                     Day4, Day5
+    build-depends:
+        base ^>=4.17,
+        split ^>=0.2,
+        containers ^>=0.6,
+        Stack ^>=0.4,
+        lens ^>=5.2
+    default-language: Haskell2010
 
 executable adventofcode2022
     -- Import common warning flags.
@@ -69,10 +77,7 @@ executable adventofcode2022
     -- Other library packages from which modules are imported.
     build-depends:
         base ^>=4.17,
-        split ^>=0.2,
-        containers ^>=0.6,
-        Stack ^>=0.4,
-        lens ^>=5.2
+        adventofcode2022
 
     -- Directories containing source files.
     hs-source-dirs:   app
