--- a/adventofcode2022.cabal
+++ b/adventofcode2022.cabal
@@ -46,7 +46,8 @@ common warnings
 library
     hs-source-dirs: src
     exposed-modules: Day1, Day2, Day3,
-                     Day4, Day5, Day6, Day7
+                     Day4, Day5, Day6,
+                     Day7, Day8
     build-depends:
         base ^>=4.17,
         split ^>=0.2,
