--- a/adventofcode2022.cabal
+++ b/adventofcode2022.cabal
@@ -49,12 +49,11 @@ library
                      Day4, Day5, Day6,
                      Day7, Day8
     build-depends:
-        base ^>=4.17,
-        split ^>=0.2,
-        containers ^>=0.6,
-        Stack ^>=0.4,
-        lens ^>=5.2,
-        parsec ^>= 3.1
+        base ^>=4.17, split ^>=0.2,
+        containers ^>=0.6, Stack ^>=0.4,
+        lens ^>=5.2, megaparsec ^>= 9.5,
+        vector ^>=0.13, text ^>=2,
+        mtl ^>=2.3
     default-language: Haskell2010
 
 executable adventofcode2022
