--- a/adventofcode2022.cabal
+++ b/adventofcode2022.cabal
@@ -53,7 +53,7 @@ library
         containers ^>=0.6, Stack ^>=0.4,
         lens ^>=5.2, megaparsec ^>= 9.5,
         vector ^>=0.13, text ^>=2,
-        mtl ^>=2.3
+        mtl ^>=2.3, strict ^>=0.5
     default-language: Haskell2010
 
 executable adventofcode2022
