--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,9 +6,9 @@
 			"installHLS": true,
 			"downgradeGhcToSupportHls": true,
 			"adjustBash": true,
-			"ghcVersion": "recommended",
-			"cabalVersion": "recommended",
-			"globalPackages": "hlint fourmolu",
+			"ghcVersion": "9.10.1",
+			"cabalVersion": "3.12.1.0",
+			"globalPackages": "fourmolu",
 			"globalLibraries": "",
 			"installStack": false
 		}
@@ -16,21 +16,21 @@
 	"containerEnv": {
             "HOME": "/home/vscode"
     },
-	//"runArgs": [
-  	//	"--network=host"
-	//],
-	"remoteEnv": {
-		"PODMAN_USERNS": "keep-id"
-	},
+	"runArgs": [
+	  "--userns=keep-id"
+	],
+	//"remoteEnv": {
+	//	"PODMAN_USERNS": "keep-id"
+	//},
 	"containerUser": "vscode",
-	"updateRemoteUserUID": true,
+	//"updateRemoteUserUID": true,
 	"remoteUser": "vscode",
 	"customizations": {
     "vscode": {
       "extensions": [
         "haskell.haskell",
         "justusadam.language-haskell",
-        "editorconfig.editor",
+        "editorconfig.editorconfig",
         "jcanero.hoogle-vscode"
       ]
     },
