--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,9 +6,9 @@
 			"installHLS": true,
 			"downgradeGhcToSupportHls": true,
 			"adjustBash": true,
-			"ghcVersion": "9.10.1",
+			"ghcVersion": "9.6.6",
 			"cabalVersion": "3.12.1.0",
-			"globalPackages": "fourmolu",
+			"globalPackages": "hlint fourmolu",
 			"globalLibraries": "",
 			"installStack": false
 		}
