--- a/adventofcode2022.cabal
+++ b/adventofcode2022.cabal
@@ -44,7 +44,15 @@ extra-doc-files: README.md
 common warnings
     ghc-options: -Wall
 
+common perf
+    ghc-options:
+        -O2
+        -- -threaded
+        -- -rtsopts
+        -- -with-rtsopts=-N
+
 library
+    import: perf
     hs-source-dirs:   src
     exposed-modules:
         Day1
@@ -79,9 +87,10 @@ library
 
     default-language: Haskell2010
 
+
 executable adventofcode2022
     -- Import common warning flags.
-    import:           warnings
+    import:           perf
 
     -- .hs or .lhs file containing the Main module.
     main-is:          Main.hs
